--- a/my-code/CSS/CSStest.html
+++ b/my-code/CSS/CSStest.html
@@ -1,7 +1,20 @@
+<!DOCTYPE>
+</DOCTYPE>
 <html>
 <!-- saved from url=(0014)about:internet -->
-
-
+<head>
+  <meta charset="utf-8">
+  <title id=1coler>CSS</title>
+  <style>
+    .1coler {
+      color(green)
+    }
+  </style>
+</head>
+<body>
+  
+  <h1 id=1coler>CSS</h1>
+</body>
 
 
 
