--- a/my-code/CSS/CSStest.html
+++ b/my-code/CSS/CSStest.html
@@ -9,11 +9,15 @@
     .1coler {
       color(green)
     }
+    .2coler {
+      color(green)
+    }
   </style>
 </head>
 <body>
   
   <h1 id=1coler>CSS</h1>
+  <em id=2coler>hi!</em>
 </body>
 
 
