--- a/03-write-your-own.html
+++ b/03-write-your-own.html
@@ -1,6 +1,7 @@
 <html>
   <!-- saved from url=(0014)about:internet -->
   <head>
-    <meta >
+    <meta charset="utf-8">
+    <title>make your own</title>
   </head>
 </html>
