--- a/03-write-your-own.html
+++ b/03-write-your-own.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>make your own</title>
-    <>
+    <script>
+    text(test)
+    </script>
   </head>
   <body>
     
