--- a/02-Web-Timer.html
+++ b/02-Web-Timer.html
@@ -23,9 +23,12 @@ web timer
 <h1>
 web timer
 </h1>
+<input id="Secs">
+</input>
+<p><button id="Doit" onclick="setTimeout(updateTimer, 1000);"></button></p>
 <p>
 <font size="24">
-<span id="web_timer" onclick="setTimeout(updateTimer, 1000);">
+<span id="web_timer">
 60
 </span>
 </font>
